tests/negative/circular_inheritance.tx
// EXPECTED: COMPILE_ERROR
// Description: Verify that circular inheritance is detected and reported as an error.

class A extends B {
    x: int;
}

class B extends A {
    y: int;
}

let a = new A();
